@@ -7,9 +7,9 @@ mpop_SOURCES = \
 	mpop.c \
 	net.c net.h \
 	netrc.c netrc.h \
-	os_env.c os_env.h \
 	pop3.c pop3.h \
 	stream.c stream.h \
+	tools.c tools.h \
 	uidls.c uidls.h
 
 mpop_LDADD = @tls_obj@ $(top_builddir)/gnulib/libgnu.a @LIBINTL@
